# devplan-mcp-server

./: .gitignore  CLAUDE_CHECKPOINT.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_HAIKU_VALIDATION.md  Dockerfile  LICENSE  PROJECT_BRIEF.md  README.md  STAGING_SETUP.md  WAVES_EXECUTION.md  glama.json  heartbeat-state.json  main.py  mcp-deployment-guide.md  middleware.py  package-lock.json  package.json  pyproject.toml  requirements.txt  smithery.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.claude/agents/: devplan-mcp-server-executor.md  devplan-mcp-server-verifier.md
.github/: methodology-hash.txt
.github/workflows/: deploy.yml  maintain-interaction-limits.yml  reference-repo-updated.yml
.well-known/: mcp.json
docs/: ADAPTERS.md  CONTRIBUTING_ADAPTERS.md  SMITHERY_SETUP.md  amp-integration-spec.md  devplan-worktrees.md  wave-planner-spec.md
docs/adapters/: aider.md  cursor.md
examples/dotfiles-manager/: DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  claude.md
examples/git-analyzer/: DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md  claude.md
memory/: 2026-02-13.md
src/: auth.ts  cloudflare-analytics.ts  dashboard.ts  generators.ts  index.ts  landing.ts  language-defaults.ts  main.py  middleware.py  models.ts  readme-diagrams.ts  session-tracking.ts  templates.ts  workflow-export.ts  workflow-types.ts  worktree.ts
src/__tests__/: adapters.test.ts  generate-plan-integration.test.ts  haiku-validation-integration.test.ts  haiku-validation.test.ts  language-defaults.test.ts  minimal-scaffold.test.ts  readme-diagrams.test.ts  template-key.test.ts  (+4 more)
(+52 files in other folders)
