[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "devplan-mcp"
version = "0.1.0"
description = "MCP server for ClaudeCode-DevPlanBuilder - generate development plans via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "devplan_mcp.server:create_server"
