[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devplan-mcp"
version = "0.1.0"
description = "MCP server for generating development plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]
