[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "devplan-mcp"
version = "0.1.0"
description = "MCP server for generating development plans"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.14.1",
    "smithery>=0.2.4",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "devplan_mcp.server:create_server"
